<resources>
    <string name="app_name">SampleApp</string>
    <string name="toast_network_not_available">Please check your internet connection!</string>
    <string name="send_mail">Send email</string>
    <string name="no_email_client">No email client found!</string>
    <string name="warning_invalid_link">Invalid website link!</string>
    <string name="warning_play_services">Google Play Services are missing from your device!</string>
    <string name="selection">Select type</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="warning_field_empty">This field cannot be empty</string>
    <string name="action_login_fb">Login With Facebook</string>
    <string name="action_login_twitter">Login With Twitter</string>
    <string name="warning_password_length">Password must be a minimum of 6 characters</string>
    <string name="hint_login_type">Email Address or Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_login">Or Login With Email</string>
    <string name="action_login">Login</string>
    <string name="action_create_account">Create Account</string>
    <string name="action_need_help">Need Help?</string>

</resources>
